# baseline

./: .gitignore
baseline/: __init__.py
baseline/deprecated/: utils_decoding.py
baseline/tensorflow/: __init__.py  attention.py  utils.py
baseline/tensorflow/layers/: __init__.py  attention.py  treelstm.py
baseline/tensorflow/utils/: __init__.py
baseline/tf/: __init__.py
baseline/tf/layers/: __init__.py  attention.py  treelstm.py
baseline/tf/utils/: __init__.py  averagemanager.py  functions.py
baseline/torch/: __init__.py
baseline/torch/layers/: __init__.py  attention.py
baseline/torch/utils/: __init__.py  averagemanager.py  centernet.py  functions.py  (+2 more)
baseline/utils/: __init__.py  argparse.py  chunk.py  closed_interval.py  dictionary.py  logging_util.py  loop.py  metrics.py  padding.py  progress_bar.py  text_utils.py  transformers_utils.py  unique_id.py
dataset/conll04-ner/: build.py
datasets/conll04-ner/: build.py
models/conll04_bert/: main.py
models/quora_insincere/: main.py  model.py
samples/deepspeed_pipeline_parallel/: README.md  deepspeed.pipe.json  main.deepspeed.pipe.llama.py  main.deepspeed.pipe.py  main.deepspeed.pipe.uniform.py  modeling_llama.py  pyproject.toml  token_ids.json
tests/: test_dictionary.py  test_import.py  test_tensorflow_utils.py  test_tf_utils.py  test_torch_utils_functions.py  test_utils_argparse.py  test_utils_closed_interval.py  test_utils_dataset_brat.py  test_utils_dataset_ner.py  test_utils_dataset_pubtator.py  test_utils_decoding.py  test_utils_dictionary.py  test_utils_padding.py  test_utils_text_utils.py
(+7 files in other folders)
